#插入排序
add_executable(4-1InsertSort sortHelper.h sortHelper.cpp
        01.InsertSort/insertSort.h 01.InsertSort/insertSort.cpp 01.InsertSort/main.cpp)
#交换排序
add_executable(4-2SwapSort sortHelper.h sortHelper.cpp
        02.SwapSort/bubbleSort.h 02.SwapSort/bubbleSort.cpp 02.SwapSort/main.cpp 02.SwapSort/quickSort.h 02.SwapSort/quickSort.cpp)
